2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02833] ssl_forbid_method in SSL Setting
	* rc.c (params7): ssl_forbid_method moved here
	* rc.c (params8): ssl_forbid_method removed here
	* rc.c (sections): params7 ifdef USE_SSL

2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02832] external URI loader support
	* NEWS: support external URI loader
	* config.h.dist (USE_EXTERNAL_URI_LOADER): added
	* config.h.dist (USER_URIMETHODMAP): added
	* config.h.dist (SYS_URIMETHODMAP): added
	* configure: ask use_external_uri_loader
	* file.c (loadGeneralFile): return NO_BUFFER, not NULL
	* file.c (loadGeneralFile): add SCM_UNKNOWN for USE_EXTERNAL_URI_LOADER
	* fm.h (urimethodmap_files): added
	* menu.c (initSelectMenu): SCM_UNKNOWN comment out
	* proto.h (initURIMethods): added
	* proto.h (searchURIMethods): added
	* rc.c (CMT_URIMETHODMAP): added
	* rc.c (params6): add urimethodmap
	* rc.c (sync_with_option): add initURIMethods()
	* url.c (parseURL): if SCM_UNKNOWN, url is saved in pu->file
	* url.c (_parsedURL2Str): if SCM_UNKNOWN, url is in pu->file
	* url.c (urimethods): added
	* url.c (loadURIMethods): added
	* url.c (initURIMethods): added
	* url.c (searchURIMethods): added

2002-01-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02828]
	* url.c (_parsedURL2Str): add '/' at the end when scheme is SCM_FTPDIR

2002-01-12  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02829]
	* file.c (loadGeneralFile): return NO_BUFFER
	* file.c (loadGeneralFile): if ssl_get_certificate() fails, 
			no buffer created
	* istream.c (ssl_certificate_validity): deleted
	* istream.c (ssl_set_certificate_validity): ditto
	* istream.c (accept_this_site): added
	* istream.c (ssl_accept_this_site): ditto
	* istream.c (ssl_check_cert_ident): 1st arg is `X509 *'
	* istream.c (ssl_get_certificate): 2nd arg is `char *hostname'
			cert check code moved here from openSSLHandle()
	* url.c (free_ssl_ctx): accept_this_site initialized